--- a/interno/ait.html
+++ b/interno/ait.html
@@ -258,7 +258,7 @@
         </div>
     </footer>
 
-    <script src="app.js" defer></script>
+    <script src="../app.js" defer></script>
     <script src="ait.js" defer></script>
 </body>
 </html>
