--- a/interno/diario-oficial.html
+++ b/interno/diario-oficial.html
@@ -60,8 +60,8 @@
                     </a>
                     <span class="gov-divider" aria-hidden="true"></span>
                     <div class="gov-identity">
-                        <span class="gov-ministry">MINIST?RIO DA JUSTI?A E SEGURAN?A P?BLICA</span>
-                        <span class="gov-agency">Pol?cia Rodovi?ria Federal</span>
+                        <span class="gov-ministry">MINIST&Eacute;RIO DA JUSTI&Ccedil;A E SEGURAN&Ccedil;A P&Uacute;BLICA</span>
+                        <span class="gov-agency">Pol&iacute;cia Rodovi&aacute;ria Federal</span>
                     </div>
                 </div>
                 <div class="top-header-right">
@@ -94,17 +94,17 @@
     <header class="main-header main-header--duna" id="menu">
         <div class="container">
             <div class="header-row">
-                <nav class="mini-nav mini-nav--left" aria-label="P?ginas (esquerda)">
-                    <a href="../index.html">IN?CIO</a>
+                <nav class="mini-nav mini-nav--left" aria-label="P&aacute;ginas (esquerda)">
+                    <a href="../index.html">IN&Iacute;CIO</a>
                     <div class="nav-dropdown">
                         <a href="#" class="nav-link-dropdown" aria-haspopup="true" aria-expanded="false">INSTITUCIONAL</a>
                         <div class="dropdown-menu">
                             <a href="../organograma.html">Organograma</a>
-                            <a href="../historia-valores.html">Hist?ria e Valores</a>
+                            <a href="../historia-valores.html">Hist&oacute;ria e Valores</a>
                         </div>
                     </div>
                     <div class="nav-dropdown">
-                        <a href="#" class="nav-link-dropdown" aria-haspopup="true" aria-expanded="false">SERVI?OS</a>
+                        <a href="#" class="nav-link-dropdown" aria-haspopup="true" aria-expanded="false">SERVI&Ccedil;OS</a>
                         <div class="dropdown-menu">
                             <a href="../documentos.html">Documentos PRF</a>
                         </div>
@@ -117,9 +117,9 @@
                         </a>
                     </div>
                 </div>
-                <nav class="mini-nav mini-nav--right" aria-label="P?ginas (direita)">
+                <nav class="mini-nav mini-nav--right" aria-label="P&aacute;ginas (direita)">
                     <a href="../concursos.html">CONCURSOS</a>
-                    <a href="../capacitacao.html">CAPACITAÇÃO E TREINAMENTO</a>
+                    <a href="../capacitacao.html">CAPACITA&Ccedil;&Atilde;O E TREINAMENTO</a>
                     <a href="../corregedoria.html">CORREGEDORIA</a>
                 </nav>
             </div>
@@ -163,23 +163,23 @@
         <div class="container">
             <div class="diario-footer-top">
                 <div class="diario-footer-brand">
-                    <img src="assets/img/prf.png" alt="Pol?cia Rodovi?ria Federal" class="diario-footer-logo">
+                    <img src="assets/img/prf.png" alt="Pol&iacute;cia Rodovi&aacute;ria Federal" class="diario-footer-logo">
                     <div class="diario-footer-brand-text">
-                        <strong>Pol?cia Rodovi?ria Federal</strong>
+                        <strong>Pol&iacute;cia Rodovi&aacute;ria Federal</strong>
                         <span>Unidade Operacional Jaguar&eacute;</span>
-                        <span>S?o Paulo - SP</span>
+                        <span>S&atilde;o Paulo - SP</span>
                     </div>
                 </div>
                 <div class="diario-footer-contact">
                     <h4>CONTATO</h4>
                     <p>PRF &mdash; Delegacia de Jaguar&eacute;</p>
                     <p>Telefone: 191 (PRF)</p>
-                    <p>Emerg?ncia: 190</p>
+                    <p>Emerg&ecirc;ncia: 190</p>
                 </div>
             </div>
             <div class="diario-footer-divider" aria-hidden="true"></div>
             <div class="diario-footer-bottom">
-                <span>? 2026 Pol?cia Rodovi?ria Federal ? Todos os direitos reservados</span>
+                <span>&copy; 2026 Pol&iacute;cia Rodovi&aacute;ria Federal &mdash; Todos os direitos reservados</span>
                 <img src="assets/img/gov_br.png" alt="gov.br" class="diario-footer-gov">
             </div>
         </div>
