--- a/interno/patrulha.html
+++ b/interno/patrulha.html
@@ -348,7 +348,7 @@
         </div>
     </footer>
 
-    <script src="app.js" defer></script>
+    <script src="../app.js" defer></script>
     <script src="patrulha.js" defer></script>
 </body>
 </html>
