--- a/capacitacao.html
+++ b/capacitacao.html
@@ -19,7 +19,7 @@
             } catch (e) {}
         })();
     </script>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -167,4 +167,5 @@
     <script src="app.js" defer></script>
 </body>
 </html>
+
 
