--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             } catch (e) {}
         })();
     </script>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -179,4 +179,5 @@
     </div>
 </body>
 </html>
+
 
