--- a/preencher-bopm.html
+++ b/preencher-bopm.html
@@ -20,7 +20,7 @@
             } catch (e) {}
         })();
     </script>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -141,3 +141,4 @@
     <script src="app.js" defer></script>
 </body>
 </html>
+
