--- a/interno/painel.html
+++ b/interno/painel.html
@@ -146,8 +146,8 @@
     <section class="latest-news info-section">
         <div class="container">
             <div class="news-header">
-                <h2>Acesso Interno - PRF</h2>
-                    <div class="red-line-news"></div>
+                <h2>SIGA - Sistema Integrado de Gestão Administrativa</h2>
+                <div class="red-line-news"></div>
             </div>
             <article class="profile-brand-card" id="painel-profile-card">
                 <div class="profile-brand-overlay">
