--- a/corregedoria.html
+++ b/corregedoria.html
@@ -164,9 +164,10 @@
             </div>
             <div class="diario-footer-divider" aria-hidden="true"></div>
             <div class="diario-footer-bottom">
-                <span>&copy; 2026 Pol&iacute;cia Rodovi&aacute;ria Federal &mdash; Todos os direitos reservados</span>
-                <img src="assets/img/gov_br.png" alt="gov.br" class="diario-footer-gov">
+                <span>© 2026 Lucas Santhi — Todos os direitos reservados</span>             
+                <img src="assets/img/gov_br.png" alt="gov.br" class="diario-footer-gov">                
             </div>
+            <div><span>Este site não tem vínculo com nenhuma instituição real.</span></div>
         </div>
     </footer>
 
