--- a/criar-conta.html
+++ b/criar-conta.html
@@ -181,9 +181,10 @@
             </div>
             <div class="diario-footer-divider" aria-hidden="true"></div>
             <div class="diario-footer-bottom">
-                <span>© 2026 Polícia Rodoviária Federal — Todos os direitos reservados</span>
-                <img src="assets/img/gov_br.png" alt="gov.br" class="diario-footer-gov">
+                <span>© 2026 Lucas Santhi — Todos os direitos reservados</span>             
+                <img src="assets/img/gov_br.png" alt="gov.br" class="diario-footer-gov">                
             </div>
+            <div><span>Este site não tem vínculo com nenhuma instituição real.</span></div>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
